--- a/geos_ats_package/geos_ats/assets/style.css
+++ b/geos_ats_package/geos_ats/assets/style.css
@@ -71,4 +71,5 @@ th {
   padding: 8px;
 }
 
-
+.lb-outerContainer { max-width:675px; max-height:525px; }
+.lb-image{ width:600px!important; max-height:450px!important;}
