--- a/geos-trame/src/geos/trame/app/io/jinja_t/p4_slurm.jinja
+++ b/geos-trame/src/geos/trame/app/io/jinja_t/p4_slurm.jinja
@@ -15,13 +15,13 @@ ulimit -c unlimited
 
 module purge
 module use {{ geos_module }}
+module load {{ geos_load_list }}
 
 export HDF5_USE_FILE_LOCKING=FALSE
 export OMP_NUM_THREADS=1
-export EXEC={{ geosPath }}
-
+export EXEC={{ geos_path }}
 
 srun --mpi=pmix_v3 --hint=nomultithread \
     -n {{ ntasks }} ${EXEC} \
     -o Outputs_${SLURM_JOBID} \
-    -i {{ input_file | default('geosDeck.xml') }} | tee Outputs_${SLURM_JOBID}/log_${SLURM_JOBID}.out
+    -i {{ input_file | default('geosDeck.xml') }} | tee log_${SLURM_JOBID}.out
