--- a/geos-trame/src/geos/trame/app/io/jinja_t/p4_copyback.jinja
+++ b/geos-trame/src/geos/trame/app/io/jinja_t/p4_copyback.jinja
@@ -11,4 +11,5 @@
 #SBATCH --err=job_GEOS_%j.err
 #SBATCH --dependency=afterok:{{ dep_job_id }}
 
-srun tar cfz {{ dep_job_id }}.tgz Outputs_{{ dep_job_id }}/ log_{{ dep_job_id }}.out && mv -v {{ dep_job_id }}.tgz {{ target_dl_path }}
+srun tar cfz {{ dep_job_id }}.tgz Outputs_{{ dep_job_id }}/ log_{{ dep_job_id }}.out 
+srun mkdir -p {{ target_dl_path }} && mv -v {{ dep_job_id }}.tgz {{ target_dl_path }}
