--- a/geos-trame/src/geos/trame/app/io/jinja_t/local_slurm.jinja
+++ b/geos-trame/src/geos/trame/app/io/jinja_t/local_slurm.jinja
@@ -21,7 +21,7 @@ export HDF5_USE_FILE_LOCKING=FALSE
 export OMP_NUM_THREADS=1
 export EXEC={{ geos_path }}
 
-mpirun -mca coll_hcoll_enable 0 -x UCX_RNDV_THRESH=131072 \
+srun --hint=nomultithread \
     -n {{ ntasks }} ${EXEC} \
     -o Outputs_${SLURM_JOBID} \
     -i {{ input_file | default('geosDeck.xml') }} | tee Outputs_${SLURM_JOBID}/log_${SLURM_JOBID}.out
