fine-grained conf

--- a/geos-trame/src/geos/trame/app/io/jinja_t/pine_copyback.jinja
+++ b/geos-trame/src/geos/trame/app/io/jinja_t/pine_copyback.jinja
@@ -3,7 +3,7 @@
 #SBATCH --ntasks={{ ntasks }}
 #SBATCH --partition={{ partition }}
 #SBATCH --comment={{ comment_gr }}
-#SBACTH --account={{ account }}
+#SBATCH --account={{ account }}
 #SBATCH --nodes={{ nodes }}
 #SBATCH --time={{ time | default('00:10:00') }}
 #SBATCH --mem={{ mem }}
